--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,16 +1,22 @@
 @import './colors.scss';
+@import './NavBarOffCanvas.scss';
 
 .header{
     .menu{
         display:none;
     }
+    // .NavBarOffCanvas-background{
+    //     display: none;
+    // }
+
     display:flex;
     justify-content: space-between;
     align-items: center;
+    width:85%;
 
     .navbar a{
-
-        // margin-left: 4%;
+        padding:6%;
+        color: $Dark-grayish-blue;
     }
 
     .navbar a:hover{
